--- a/css/styles.css
+++ b/css/styles.css
@@ -422,7 +422,12 @@ body{
             top: 100px;
              width: 190px;
              height: auto;
+		  margin-bottom:40px;
 }
+	    .map
+            {
+                display: block;
+            }
 .main{
     height: 50vh;
 }
